--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">smartcalc</string>
+    <string name="main_menu_header_text">Util App Thing</string>
+    <string name="calculator_btn_text">Calculator</string>
 </resources>
